# shrewd_orca

./: .gitignore  CNAME  Cargo.toml  index.html  readme.md  shrewd-orca-2d35aa8d99697121.js  shrewd-orca-2d35aa8d99697121_bg.wasm  shrewd-orca-67d7650166c99ce5.js  shrewd-orca-6f0180433124ddb9.js  shrewd-orca-6f0180433124ddb9_bg.wasm  shrewd-orca-72b0906c01b0428f.js  shrewd-orca-72b0906c01b0428f_bg.wasm  shrewd-orca-96ec81a159f840d0.js  shrewd-orca-a6e7fd57ff891ac.js  shrewd-orca-a6e7fd57ff891ac_bg.wasm  shrewd-orca-ad5ae991d431b25c.js  shrewd-orca-ad5ae991d431b25c_bg.wasm  shrewd-orca-b66da353c5dd0062.js  shrewd-orca-b66da353c5dd0062_bg.wasm  shrewd-orca-b6f045a3c42b543d.js  shrewd-orca-bdd4c10787c08175.js  shrewd-orca-bdd4c10787c08175_bg.wasm  shrewd-orca-c94c7de026199bf3.js  shrewd-orca-c94c7de026199bf3_bg.wasm  shrewd-orca-d4c564d33f061f96.js  shrewd-orca-d4c564d33f061f96_bg.wasm  shrewd-orca-d744bc1b248c94eb.js  shrewd-orca-d744bc1b248c94eb_bg.wasm  shrewd-orca-f68d22f9f650af66.js  shrewd-orca-f68d22f9f650af66_bg.wasm  tasks.md
.github/workflows/: continuous_deployment.yml
benches/: bench.rs
src/: lib.rs  main.rs
src/bin1/dict-generator/: main.rs
src/core/: anagram_dict.rs  anagram_iterator.rs  anagram_key.rs  anagram_settings.rs  binary_map.rs  character.rs  common_words.txt  equation.rs  expression.rs  fixed_length_expression.rs  homograph.rs  many_expression_type.rs  mod.rs  pattern.rs  question.rs  solution.rs  solvable.rs  term.rs  term_dict.rs  word_context.rs  word_query.rs
src/language/: examples.rs  mod.rs  parser.rs  pattern.rs  phrase_expressions.rs  solver.rs  word_lang_parser.rs  wordlang.pest
src/state/: full_state.rs  input_state.rs  mod.rs  results_state.rs
src/web/: app.rs  mod.rs  row_loader.rs
tests/: my_tests.rs
tests/snapshots/: my_tests__3__plus__hashn__plus__hashv__plus_hashj__plus__hasha.snap  my_tests__5.snap  my_tests__5__plus__exclamationn.snap  my_tests__5__plus__hashn.snap  my_tests__6_7.snap  my_tests__6_full_stop_full_stop7.snap  my_tests___exclamationn.snap  my_tests___hasha.snap  my_tests___hashf_eastwood__equala__exclamationphrase.snap  my_tests___hashj.snap  my_tests___hashn.snap  my_tests___hashv.snap  my_tests___left_paranthesisworld__slash_earth_right_paranthesis.snap  my_tests___left_paranthesisworld_right_paranthesis.snap  my_tests__b_asteriskd.snap  my_tests__b_questionmarkd.snap  my_tests__c_atvt.snap  my_tests__c_questionmarkt_fl_questionmarkp.snap  my_tests__cat__equala__asterisk.snap  my_tests__clint_eastwood.snap  my_tests__clint_eastwood__equala.snap  my_tests__clint_eastwood__equala.snap.new  my_tests__clint_eastwood__equala__asterisk__asterisk.snap  my_tests__clint_eastwood__equala__asterisk_asterisk.snap  my_tests__clint_eastwood__equala__exclamationn__exclamationj.snap  my_tests__clint_eastwood__equala__exclamationphrase.snap  my_tests__clint_eastwood__equala__exclamationphrase.snap.new  my_tests__clint_eastwood__equala__hashn__hashj.snap  my_tests__davis_ephanie___equala.snap  my_tests__davis_ephanie___equala__exclamationphrase.snap.new  my_tests__desserts__equala__asterisk_asterisk.snap  my_tests__desserts__equala__asterisk_asterisk.snap.new  my_tests__name__asterisk__equala_anagram__asterisk.snap  my_tests__red_bat__equala__asterisk__asterisk.snap  my_tests__red_bat__equala__asterisk_asterisk.snap  my_tests__sean_aguirre__equala__exclamationphrase__plus_genius.snap  my_tests__solve_with_term_dict_6_7.snap  my_tests__solve_with_term_dict_6_full_stop_full_stop7.snap  my_tests__solve_with_term_dict__exclamationv.snap  my_tests__solve_with_term_dict_b_asteriskd.snap  (+1 more)
