[package]
name = "word-playground"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["anagram", "language", "english"]
edition= "2021"

[dependencies]
itertools = "0.10.3"
num = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
pest = "2.1"
pest_derive = "2.1"

array-const-fn-init = "0.1"
enumflags2 = {version= "0.7", features= ["serde"]}
smallvec = {version = "1.9.0", features=["serde", "union","const_generics", "const_new" ]}
once_cell = "1.13"
auto_enums = {version = "0.7", features=["std"]}


log = "0.4"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr",] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
rand = {version = "0.8"}
getrandom = {version="0.2", features=["js"]}

regex= {version="1.6", features=["std", "perf",  ]}
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement","HtmlSelectElement", "HtmlTextAreaElement"
]



[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
bencher= "0.1"
ntest = "0.8"
insta = "1.15.0"
