[package]
name = "shrewd-orca"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["anagram", "language", "english"]
edition= "2021"
default-run = "shrewd-orca"


[dependencies]
itertools = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
pest = "2"
pest_derive = "2"

array-const-fn-init = "0.1"
enumflags2 = {version= "0.7", features= ["serde"]}
smallvec = {version = "1", features=["serde", "union","const_generics", "const_new" ]}
once_cell = "1"
auto_enums = {version = "0.8", features=["std"]}
include-flate = "0.2"

log = "0.4"
yew = { version="0.20", features = ["csr",] }
yewdux = { version="0.9" }
yew-hooks = { version="0.2" }


regex= {version="1", features=["std", "perf",  ]}
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
js-sys = "0.3"
quick-xml = { version = "0.28", features = [ "serialize" ] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
anyhow = "1"
pest_consume = "1.1"
enum_dispatch = "0.3"
beef = {version= "0.5", features= ["const_fn", "serde", "impl_serde"]}
strum = { version = "0.24", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement","HtmlSelectElement", "HtmlTextAreaElement"
]

[[bench]]
name = "bench"
harness = false


[profile.release]
#panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
criterion = "0.4"
ntest = "0.9"
insta = "1"



[[bin]]
name="dict-generator"
